--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -97,7 +97,7 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: task-definition.json
-          container-name: sample-nodejs-app-container
+          container-name: sample-nodejs-app
           image: ${{ steps.push-image.outputs.image }}
 
       - name: Deploy Amazon ECS task definition
