--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --transpile-only --no-notify --exit-child src/index.ts",
+    "dev": "ts-node src/index.ts",
+    "build": "tsc -p .",
+    "start": "node dist/index.js",
     "generate": "ts-node --transpile-only src/schema.ts",
     "prettier-format": "prettier 'src/**/*.ts' --write",
-    "migrate:deploy": "prisma migrate deploy",
-    "build": "tsc",
-    "start": "node dist/src/index.js"
+    "migrate:deploy": "prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +19,10 @@
     "express": "^4.16.3"
   },
   "devDependencies": {
-    "@types/node": "^18.7.15",
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.7.18",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.3"
   }
 }
